Moved books docs from yaml to jsdocs
